Updated with new Paintjob

--- a/paintjob/style/base.css
+++ b/paintjob/style/base.css
@@ -65,7 +65,7 @@ code{
 	font-family: 'Courier', mono;
 	color:black;
 	white-space: pre;
-	background-color: #EEE;
+	background-color: #F8F8F8;
 }
 
 a{
@@ -76,6 +76,9 @@ a:hover{
 	font-weight: bold;
 }
 
+strong{
+	font-weight: bold;
+}
 
 
 /* BUTTONS */
